Fixed navbar-top behaviour (fixed on desktop and relative on mobiles)

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -63,6 +63,7 @@
 
 .title-div{
     background-color: #D0E0D3;
+    padding-top: 50px;
 }
 
 .content-col{
@@ -114,11 +115,6 @@ background-position: center top;
 	/*vh for relative sizes*/
 }
 
-.navbar-fixed-top {
-		position: relative;
-		margin-bottom: 0px;
-}
-
 @media screen and (max-width:990px){
 	
 	.carousel-caption{
@@ -132,6 +128,13 @@ background-position: center top;
 	.col-footer-text, .col-social{
 			text-align: center;
 	}
+  .navbar-fixed-top {
+		position: relative;
+		margin-bottom: 0px;
+  }
+  .title-div{
+    padding-top: 0px;
+  }
 }
 		
 
